lib_LTLIBRARIES=libDumpStack.la
libDumpStack_la_SOURCES = \
       src/antlrlib/ANTLRUtil.cpp\
       src/antlrlib/ASTFactory.cpp\
       src/antlrlib/ASTNULLType.cpp\
       src/antlrlib/ASTRefCount.cpp\
       src/antlrlib/BaseAST.cpp\
       src/antlrlib/BitSet.cpp\
       src/antlrlib/CharBuffer.cpp\
       src/antlrlib/CharScanner.cpp\
       src/antlrlib/CommonAST.cpp\
       src/antlrlib/CommonASTWithHiddenTokens.cpp\
       src/antlrlib/CommonHiddenStreamToken.cpp\
       src/antlrlib/CommonToken.cpp\
       src/antlrlib/InputBuffer.cpp\
       src/antlrlib/LLkParser.cpp\
       src/antlrlib/MismatchedCharException.cpp\
       src/antlrlib/MismatchedTokenException.cpp\
       src/antlrlib/NoViableAltException.cpp\
       src/antlrlib/NoViableAltForCharException.cpp\
       src/antlrlib/Parser.cpp\
       src/antlrlib/RecognitionException.cpp\
       src/antlrlib/String.cpp\
       src/antlrlib/Token.cpp\
       src/antlrlib/TokenBuffer.cpp\
       src/antlrlib/TokenRefCount.cpp\
       src/antlrlib/TokenStreamBasicFilter.cpp\
       src/antlrlib/TokenStreamHiddenTokenFilter.cpp\
       src/antlrlib/TokenStreamRewriteEngine.cpp\
       src/antlrlib/TokenStreamSelector.cpp\
       src/antlrlib/TreeParser.cpp\
       src/antlrparse/CcatFormatException.cpp\
       src/antlrparse/CcatLexer.cpp\
       src/antlrparse/CcatParser.cpp\
       src/antlrparse/CcatTypeValue.cpp\
       src/antlrparse/MismatchedUnicodeCharException.cpp\
       src/classfileoperation/AttributeInfo.cpp\
       src/classfileoperation/BaseInfo.cpp\
       src/classfileoperation/ClassFile.cpp\
       src/classfileoperation/CpInfo.cpp\
       src/classfileoperation/ExceptionInfo.cpp\
       src/classfileoperation/FieldInfo.cpp\
       src/classfileoperation/MethodInfo.cpp\
       src/classfileoperation/OpCodeScan.cpp\
       src/common/Config.cpp\
       src/common/Logger.cpp\
       src/common/DumpObject.cpp\
       src/common/Global.cpp\
       src/common/HelperFunc.cpp\
       src/common/JniLocalRefAutoRelease.cpp\
       src/common/JvmtiAutoRelease.cpp\
       src/common/JvmUtilFunc.cpp\
       src/common/MonitoringClass.cpp\
       src/common/MonitoringInstance.cpp\
       src/common/MonitoringMethod.cpp\
       src/common/MonitoringTarget.cpp\
       src/common/ObjectAutoRelease.cpp\
       src/common/OutputSetting.cpp\
       src/common/ExcludeClass.cpp\
       src/common/ReadCfgFileException.cpp\
       src/common/SystemInfo.cpp\
       src/common/SimpleStackTrace.cpp\
       src/jniutility/AgentCallbackHandler.cpp\
       src/jniutility/AgentRoutine.cpp\
       src/jniutility/ExceptionNameMan.cpp\
       src/jniutility/ExceptionTableMan.cpp\
       src/jniutility/Monitor.cpp\
       src/output/Attribute.cpp\
       src/output/Frame.cpp\
       src/output/Method.cpp\
       src/output/Instance.cpp\
       src/output/ObjectData.cpp\
       src/output/ObjectPool.cpp\
       src/output/StackTrace.cpp\
       src/output/SuperClass.cpp\
       src/output/ThisObject.cpp\
       src/output/TypedElement.cpp
AM_CPPFLAGS =-I$(srcdir)/include/ -I$(JAVA_HOME)/include/ -I$(JAVA_HOME)/include/linux

LIBS=$LIBS -lxerces-c -llicense 
libDumpStack_la_LDFLAGS = -version-info @LT_VERSION@ $(LIBS) -shrext .so
